# m22-pmr

./: main.py  pyproject.toml  run.py
data/: inspect_mock_data.ipynb  inspect_old_data.ipynb  mock_data_Q001.json  mock_data_Q002.json  mock_data_Q003.json  mock_data_Q004.json  mock_data_Q005.json  mock_data_Q006.json  mock_data_Q007.json  mock_data_Q008.json  mock_data_Q009.json  mock_data_Q010.json
data/outputs/: v1_Q005.json  v2_Q005.json
docs/: domain_scoring.md  note.txt  pmr_design_v1.md  pmr_design_v2.md  proposal_1.md
pmr/adapters/cross_encoder/: __init__.py  base.py  dummy.py  sentence_transformer.py
pmr/api/: app.py
pmr/config/: api_config.py  v1_defaults.py  v2_defaults.py
pmr/core/: __init__.py  errors.py  interfaces.py  models.py
pmr/engine/v1/: pipeline.py  scoring.py  threshold.py  verdict.py
pmr/engine/v2/: confidence.py  evidence.py  fusion.py  gate.py  pipeline.py  scoring.py  semantic.py  verdict.py
reports/minilm/: hpvd_pmr_analysis_results.csv
reports/openai/: hpvd_pmr_analysis_report.md  hpvd_pmr_analysis_results.csv
reports/report2/: eval_results.csv  eval_summary.csv  pmr_analysis_report.md  pmr_analysis_summary.csv
reports/report3_roberta/: eval_results_roberta.csv  eval_summary_roberta.csv
reports/report4_electra/: eval_results_electra.csv  eval_summary_electra.csv
reports/report5_domain_scoring/: domain-scoring.md
reports/report5_domain_scoring/minilm/: eval_results_exp1_domain_scoring.csv  (+1 more)
tests/: conftest.py  test_mock_data.py  test_models.py  test_v1_pipeline.py  test_v2_pipeline.py
(+2 files in other folders)
