[project]
name = "pmr"
version = "0.1.0"
description = "Probability Multimodal Reasoning — post-retrieval ranking layer"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "sentence-transformers>=3.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
